Bump some and remove some dependencies